--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "backend": "json-server --watch db.json"
+    "backend": "json-server --watch db.json --port 8000"
   },
   "eslintConfig": {
     "extends": [
